# vividscripts-mcp

./: .git-commit-message-tmp.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  bandit.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: architecture.md  auth.md  magic-link.md  prompts.md  security.md  tools.md
examples/: claude-code-demo.md  local-dev.md
scripts/: gen_tools_docs.py
src/vividscripts_mcp/: __init__.py  __main__.py  models.py  server.py  stepstore.py
src/vividscripts_mcp/adapters/: __init__.py  base.py  mock.py
src/vividscripts_mcp/oauth/: __init__.py  audit.py  authorize.py  bearer.py  callback.py  codes.py  cognito.py  context.py  dcr.py  keys.py  metadata.py  mock_idp.py  ratelimit.py  session.py  startup_guards.py  store.py  token.py  tokens.py
src/vividscripts_mcp/prompts/: __init__.py  definitions.py
src/vividscripts_mcp/schemas/: __init__.py  image_director_followup.json  image_prompt_edit.json  image_split_analyzer.json  motion_direction.json  narration_grouping.json  resume_project.json  short_title_generator.json  sound_effect_analyzer.json  sound_effect_category.json  stage_direction_bible.json  stage_direction_subsequent.json  story_blueprint.json  story_optimization.json  story_summarizer.json  thumbnail.json  thumbnail_format_selector.json  thumbnail_text.json  title_generator.json
src/vividscripts_mcp/tools/: __init__.py  handoff.py  media.py  projects.py  prompts.py  scenes.py  state.py
tests/: conftest.py
tests/fixtures/step_results/: image_director_first.json  image_director_followup.json  image_director_subsequent.json  image_prompt_edit.json  motion_direction.json  (+15 more)
tests/integration/: __init__.py  test_full_ai_pipeline.py  test_oauth_to_create_project.py  test_resume_flow.py
tests/security/: __init__.py  test_audit_redaction.py  test_bearer_isolation.py  test_constant_time.py  test_dcr_auth_methods.py  test_duplicate_auth_header.py  test_error_uniformity.py  test_input_bounds.py  test_jwt_policy.py  test_magic_link_ttl.py  test_metadata_url_safety.py  test_redact_token_safety.py  test_redirect_uri_validation.py  test_refresh_reuse_detection.py  test_seed_session_safety.py  test_startup_guards.py  test_url_safety.py
tests/unit/: test_docs_prompts.py  test_mock_backend.py  test_oauth_authorize.py  test_oauth_bearer.py  test_oauth_cognito_broker.py  test_oauth_dcr.py  test_oauth_metadata.py  test_oauth_ratelimit.py  test_oauth_token.py  test_prompts_definitions.py  test_schemas.py  test_server.py  test_stepstore.py  test_tools_handoff.py  test_tools_media.py  test_tools_projects.py  test_tools_prompts.py  test_tools_scenes.py  test_tools_state.py
